# CMNIST

./: CMakeLists.txt  Config.cmake.in  README.md  cmnist.cpp
include/custom-datasets/: cmnist.hpp
